--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
+    <div class="Luna">
+        <h1><a href="https://github.com/anshh-arora/Luna-AI" target="_blank">Luna AI</a></h1>
+    </div>
     <div class="chat-container">
         <div class="chat-header">
             <div class="bot-profile">
@@ -40,12 +43,12 @@
         </div>
 
         <div class="chat-input-container">
-            <textarea id="messageInput" placeholder="Type your message..."></textarea>
+            <textarea id="messageInput" placeholder="Type your message..." ></textarea>
             <div class="input-buttons">
                 <button id="voiceInput" class="voice-input-button">
                     <i class="fas fa-microphone"></i>
                 </button>
-                <button id="sendMessage" class="send-button">
+                <button id="sendMessage" class="send-button" type="submit">
                     <i class="fas fa-paper-plane"></i>
                 </button>
             </div>
